--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    border-radius: 5px;
 }
 
 .li {
@@ -28,6 +29,7 @@ body {
     margin: 10px;
     border: 1px solid #000;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 .li:hover {
